--- a/default/molecule.yml
+++ b/default/molecule.yml
@@ -12,7 +12,7 @@ platforms:
 provisioner:
   name: ansible
   env:
-    ANSIBLE_ROLES_PATH: ../
+    ANSIBLE_ROLES_PATH: ../../
     components:
       - name: test_component
         path: test_component.yml
