Use community.general

--- a/test_component.yml
+++ b/test_component.yml
@@ -9,3 +9,9 @@
         dest: "{{ item['file_name'] }}"
         content: "{{ item['content'] }}"
       with_items: "{{ test_param }}"
+
+    # To test the community.general collection
+    - name: Convert a duration into weeks
+      ansible.builtin.debug:
+        msg: "{{ '1y 7m 5d 30h' | community.general.to_weeks }}"
+  
