--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,4 @@
 # This file is just to specify requirements for running the liter on the SRC-Molecule repository.
 collections:
   - name: community.general
+  - name: community.dns
