--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,5 @@
 ---
-# This file is just to specify requirements for running the liter on the SRC-Molecule repository.
 collections:
-  - name: community.general
-  - name: community.dns
+  - name: https://github.com/UtrechtUniversity/researchcloud-items.git # the uusrc.general collection
+    type: git
+    version: c9c638e316e92db0022c4a4f2701d489833bf566
